Enable return code check for wt profile feature

--- a/wix/main.wxs
+++ b/wix/main.wxs
@@ -389,7 +389,7 @@
             BinaryKey="WixCA"
             DllEntry="CAQuietExec"
             Execute="deferred"
-            Return="ignore"
+            Return="check"
             Impersonate="yes"/>
         <InstallExecuteSequence>
             <Custom Action='ReplacePathsInWindowsTerminalProfile' Before='InstallFinalize'>
